refactor: collect -> list